# mcp-market-place

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml  pr.yml
backend/: README.md  pyproject.toml
backend/app/: config.py  deps.py  logging.py  main.py  models.py
backend/app/routers/: bots.py  dashboard.py  events.py  gateways.py  harnesses.py  secrets.py
backend/app/services/: agentcore_gateway.py  agentcore_harness.py  bedrock.py  dynamo.py  secrets_manager.py  telegram.py
backend/tests/: conftest.py  test_bots_api.py  test_dynamo.py  test_gateways_api.py  test_harnesses_api.py  test_logging.py
frontend/: .env.example  .eslintrc.json  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
frontend/app/: layout.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/bots/: page.tsx
frontend/app/(app)/dashboard/: page.tsx
frontend/app/(app)/gateways/: page.tsx
frontend/app/(app)/harnesses/: page.tsx
frontend/app/(app)/models/: page.tsx
frontend/components/platform/: ActivityTable.tsx  AuthGate.tsx  BotCard.tsx  KpiCard.tsx  Modal.tsx  PageHeader.tsx  Sidebar.tsx  StatusPill.test.tsx  StatusPill.tsx  Toast.tsx  TopBar.tsx  icons.tsx
frontend/components/ui/: button.tsx  input.tsx
frontend/lib/: api.ts  auth.ts  types.ts  utils.test.ts  utils.ts
frontend/styles/: globals.css  tokens.css
harness/: Dockerfile  app.py
infra/: README.md
infra/bootstrap/: README.md  example.tfvars  main.tf
infra/envs/prod/: main.tf  terragrunt.hcl
infra/modules/amplify/: main.tf
infra/modules/api-gateway/: main.tf
infra/modules/backend-lambda/: main.tf
infra/modules/cognito/: main.tf
infra/modules/dynamodb/: main.tf
infra/modules/ecr/: main.tf
infra/modules/harness-runtime-role/: main.tf
infra/modules/webhook-lambda/: main.tf
scripts/: build-backend.sh  build-webhook.sh
webhook/: README.md  handler.py  pyproject.toml
webhook/tests/: test_handler.py
(+7 files in other folders)
